ja faz split das simulations

--- a/project1_Notebook.ipynb
+++ b/project1_Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
     "# Remove the faulty rows from the DataFrame\n",
     "train_data_preprocessed = train_data[~train_data.index.isin(zero_rows.index)]\n",
     "train_data_preprocessed.reset_index(drop=True, inplace=True)\n",
-    "train_data_preprocessed.to_csv('train_preprocessed.csv', index=False)"
+    "#train_data_preprocessed.to_csv('train_preprocessed.csv', index=False)"
    ]
   },
   {
@@ -95,13 +95,13 @@
     "\n",
     "# Create a pairwise scatter plot matrix\n",
     "scatter_matrix = pd.plotting.scatter_matrix(train_data_preprocessed,\n",
-    "                                            #figsize=(20, 20))\n",
+    "                                            figsize=(20, 20))\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,10 +120,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#create feature label matrices\n",
+    "#we're not going to use the velocity components as features\n",
+    "train_data_without_velocity = train_data_preprocessed.drop(columns=['Id','v_x_1','v_x_2','v_y_1', \n",
+    "                                                           'v_y_2', 'v_x_3', 'v_y_3'])\n",
+    "#divide by simulations\n",
+    "list_of_times = [values for values in train_data_without_velocity['t']]\n",
+    "time_index_tuples = list(enumerate(list_of_times))\n",
+    "zeros_indexes = list(filter(lambda value: value[1] == 0, time_index_tuples))\n",
+    "zeros_indexes = [value[0] for value in zeros_indexes] \n",
+    "list_of_simulations = [train_data_without_velocity.iloc[[zeros_indexes[i]], :zeros_indexes[i+1]] for i in range(len(zeros_indexes)-1)] \n",
+    "#list_of_simulations"
+   ]
   },
   {
    "cell_type": "code",
@@ -149,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
