Criado através do Colaboratory

--- a/lab5/SPBD_Labs_spark3_exercise.ipynb
+++ b/lab5/SPBD_Labs_spark3_exercise.ipynb
@@ -35,17 +35,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4d57df9a-9c2f-4da7-c304-c0fc34ffbe99"
+        "outputId": "d29648e6-6db5-456d-ac3b-c47282ade10f"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K     |████████████████████████████████| 281.4 MB 36 kB/s \n",
-            "\u001b[K     |████████████████████████████████| 199 kB 43.7 MB/s \n",
-            "\u001b[?25h  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m316.9/316.9 MB\u001b[0m \u001b[31m1.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
       ]
@@ -58,10 +58,22 @@
         "!wc os_maias.txt"
       ],
       "metadata": {
-        "id": "GEn0_HxQHDlx"
+        "id": "GEn0_HxQHDlx",
+        "outputId": "d35ed7cd-605a-483a-82bc-ff49c61c0529",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   5877  216896 1292368 os_maias.txt\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
